--- a/packages/elvis/src/components/form/toggle.scss
+++ b/packages/elvis/src/components/form/toggle.scss
@@ -30,7 +30,7 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
   font-style: unset;
   letter-spacing: unset;
   text-transform: unset;
-  color: inherit;
+  color: colors.color('font-color');
 
   // Larger touch-target
   &::after {
@@ -119,7 +119,7 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
 
   // Inverted
   &.e-toggle--inverted {
-    color: colors.color('white');
+    color: colors.color('font-color-light');
 
     .e-toggle__input::before {
       height: $toggle-inverted-height;
