--- a/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
+++ b/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
@@ -35,7 +35,7 @@ $pageIndentedMargin: 72px;
       font-size: 22px;
       line-height: 36px;
     }
-    .e-text-img .e-text-body {
+    .e-text-img .e-text-lg {
       @extend %image-typo;
     }
   }
