--- a/packages/web/src/app/doc-pages/components/forms/checkbox-doc/checkbox-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/checkbox-doc/checkbox-doc.component.html
@@ -10,7 +10,7 @@
 <div class="page-body">
   <!--TEMPORARY WAY TO SHOW LIVE EXAMPLES BEFORE CODE-GENERATOR-->
   <div class="e-my-48" class="component-preview-temp component-preview-animation">
-    <div class="e-text-body" style="display: flex; flex-direction: column; justify-content: flex-start">
+    <div class="e-text-lg" style="display: flex; flex-direction: column; justify-content: flex-start">
       <label class="e-checkbox" for="elvis-checkbox">
         <input type="checkbox" id="elvis-checkbox" />
         <span class="e-checkbox__mark"></span>
