--- a/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
@@ -34,23 +34,23 @@
             </ng-container>
           </app-copy>
           <div class="display-text-content">
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">Name</div>
               <div class="sub-content">
                 {{ item.title.charAt(0).toUpperCase() + item.title.slice(1) }}
               </div>
             </div>
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">Hex</div>
               <div class="sub-content">{{ item.hex }}</div>
             </div>
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">RGB</div>
               <div class="sub-content">{{ item.rgba }}</div>
             </div>
             <div
               *ngIf="item.contrastBlack !== '' || item.contrastWhite !== ''"
-              class="display-card-sub-title e-text-info"
+              class="display-card-sub-title e-text-sm"
               style="
                 display: flex;
                 flex-direction: row;
@@ -60,7 +60,7 @@
             >
               <div class="sub-title e-title-caps e-text-black">Contrast</div>
               <div
-                class="sub-content e-text-info"
+                class="sub-content e-text-sm"
                 style="
                   display: flex;
                   flex-direction: column;
@@ -86,7 +86,7 @@
             </div>
             <div
               *ngIf="item.labels"
-              class="display-card-sub-title e-text-info"
+              class="display-card-sub-title e-text-sm"
               style="
                 display: flex;
                 flex-direction: row;
@@ -96,7 +96,7 @@
             >
               <div class="sub-title e-title-caps e-text-black">Label</div>
               <div
-                class="sub-content e-text-info"
+                class="sub-content e-text-sm"
                 style="
                   display: flex;
                   flex-direction: column;
@@ -128,23 +128,23 @@
             </ng-container>
           </app-copy>
           <div class="display-text-content">
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">Name</div>
               <div class="sub-content">
                 {{ item.title.charAt(0).toUpperCase() + item.title.slice(1) }}
               </div>
             </div>
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">Hex</div>
               <div class="sub-content">{{ item.hex }}</div>
             </div>
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">RGB</div>
               <div class="sub-content">{{ item.rgba }}</div>
             </div>
             <div
               *ngIf="item.contrastBlack !== '' || item.contrastWhite !== ''"
-              class="display-card-sub-title e-text-info"
+              class="display-card-sub-title e-text-sm"
               style="
                 display: flex;
                 flex-direction: row;
@@ -154,7 +154,7 @@
             >
               <div class="sub-title e-title-caps e-text-black">Contrast</div>
               <div
-                class="sub-content e-text-info"
+                class="sub-content e-text-sm"
                 style="
                   display: flex;
                   flex-direction: column;
@@ -180,7 +180,7 @@
             </div>
             <div
               *ngIf="item.labels"
-              class="display-card-sub-title e-text-info"
+              class="display-card-sub-title e-text-sm"
               style="
                 display: flex;
                 flex-direction: row;
@@ -190,7 +190,7 @@
             >
               <div class="sub-title e-title-caps e-text-black">Label</div>
               <div
-                class="sub-content e-text-info"
+                class="sub-content e-text-sm"
                 style="
                   display: flex;
                   flex-direction: column;
@@ -224,23 +224,23 @@
             </ng-container>
           </app-copy>
           <div class="display-text-content">
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">Name</div>
               <div class="sub-content">
                 {{ item.title.charAt(0).toUpperCase() + item.title.slice(1) }}
               </div>
             </div>
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">Hex</div>
               <div class="sub-content">{{ item.hex }}</div>
             </div>
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">RGB</div>
               <div class="sub-content">{{ item.rgba }}</div>
             </div>
             <div
               *ngIf="item.contrastBlack !== '' || item.contrastWhite !== ''"
-              class="display-card-sub-title e-text-info"
+              class="display-card-sub-title e-text-sm"
               style="
                 display: flex;
                 flex-direction: row;
@@ -250,7 +250,7 @@
             >
               <div class="sub-title e-title-caps e-text-black">Contrast</div>
               <div
-                class="sub-content e-text-info"
+                class="sub-content e-text-sm"
                 style="
                   display: flex;
                   flex-direction: column;
@@ -276,7 +276,7 @@
             </div>
             <div
               *ngIf="item.labels"
-              class="display-card-sub-title e-text-info"
+              class="display-card-sub-title e-text-sm"
               style="
                 display: flex;
                 flex-direction: row;
@@ -286,7 +286,7 @@
             >
               <div class="sub-title e-title-caps e-text-black">Label</div>
               <div
-                class="sub-content e-text-info"
+                class="sub-content e-text-sm"
                 style="
                   display: flex;
                   flex-direction: column;
@@ -318,23 +318,23 @@
             </ng-container>
           </app-copy>
           <div class="display-text-content">
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">Name</div>
               <div class="sub-content">
                 {{ item.title.charAt(0).toUpperCase() + item.title.slice(1) }}
               </div>
             </div>
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">Hex</div>
               <div class="sub-content">{{ item.hex }}</div>
             </div>
-            <div class="display-card-sub-title e-text-info">
+            <div class="display-card-sub-title e-text-sm">
               <div class="sub-title e-title-caps">RGBA</div>
               <div class="sub-content">{{ item.rgba }}</div>
             </div>
             <div
               *ngIf="item.contrastBlack !== '' || item.contrastWhite !== ''"
-              class="display-card-sub-title e-text-info"
+              class="display-card-sub-title e-text-sm"
               style="
                 display: flex;
                 flex-direction: row;
@@ -344,7 +344,7 @@
             >
               <div class="sub-title e-title-caps e-text-black">Contrast</div>
               <div
-                class="sub-content e-text-info"
+                class="sub-content e-text-sm"
                 style="
                   display: flex;
                   flex-direction: column;
@@ -370,7 +370,7 @@
             </div>
             <div
               *ngIf="item.labels"
-              class="display-card-sub-title e-text-info"
+              class="display-card-sub-title e-text-sm"
               style="
                 display: flex;
                 flex-direction: row;
@@ -380,7 +380,7 @@
             >
               <div class="sub-title e-title-caps e-text-black">Label</div>
               <div
-                class="sub-content e-text-info"
+                class="sub-content e-text-sm"
                 style="
                   display: flex;
                   flex-direction: column;
