--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -28,9 +28,7 @@
           <div class="profile-info">
             <div class="e-title-caps">Developer</div>
             <div class="e-title-sm e-mt-8">Fride Skarseth</div>
-            <div class="e-text-description" style="margin-top: 4px; margin-bottom: 16px">
-              fride.skarseth@elvia.no
-            </div>
+            <div class="e-text-md" style="margin-top: 4px; margin-bottom: 16px">fride.skarseth@elvia.no</div>
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01BLN1QTHD">
                 <span class="e-btn__icon">
@@ -61,7 +59,7 @@
           <div class="profile-info">
             <div class="e-title-caps">Developer</div>
             <div class="e-title-sm e-mt-8">Trygve Scheline Urdahl</div>
-            <div class="e-text-description" style="margin-top: 4px; margin-bottom: 16px">
+            <div class="e-text-md" style="margin-top: 4px; margin-bottom: 16px">
               trygve.scheline.urdahl@elvia.no
             </div>
             <div class="profile-slack-button">
@@ -96,9 +94,7 @@
           <div class="profile-info">
             <div class="e-title-caps">Designer</div>
             <div class="e-title-sm e-mt-8">Viljar Tornøe</div>
-            <div class="e-text-description" style="margin-top: 4px; margin-bottom: 16px">
-              viljar.tornoe@elvia.no
-            </div>
+            <div class="e-text-md" style="margin-top: 4px; margin-bottom: 16px">viljar.tornoe@elvia.no</div>
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U02HB13D551">
                 <span class="e-btn__icon">
@@ -131,7 +127,7 @@
           <div class="profile-info">
             <div class="e-title-caps">Designer</div>
             <div class="e-title-sm e-mt-8">Hilde Iren Breivik</div>
-            <div class="e-text-description" style="margin-top: 4px; margin-bottom: 16px">
+            <div class="e-text-md" style="margin-top: 4px; margin-bottom: 16px">
               hilde.iren.breivik@elvia.no
             </div>
             <div class="profile-slack-button">
