--- a/packages/web/src/app/doc-pages/other-pages/faq-doc/faq-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/faq-doc/faq-doc.component.html
@@ -22,9 +22,9 @@
             </div>
           </div>
           <div class="e-accordion__content">
-            <span class="e-text-body">
+            <span class="e-text-lg">
               Check out the
-              <a class="e-link e-text-body" [routerLink]="['/about/contribute']">contribution model</a>
+              <a class="e-link e-text-lg" [routerLink]="['/about/contribute']">contribution model</a>
               .
             </span>
           </div>
@@ -38,7 +38,7 @@
             </div>
           </div>
           <div class="e-accordion__content">
-            <span class="e-text-body">
+            <span class="e-text-lg">
               Come in contact with us with any requests or reports of bugs and issues on slack
               <a
                 class="e-link e-link--new-tab e-link--inline"
@@ -76,18 +76,18 @@
             </div>
           </div>
           <div class="e-accordion__content">
-            <p class="e-text-body">
+            <p class="e-text-lg">
               Components are actively tested for these browsers and only minor visual differences should
               occur:
             </p>
-            <ul class="e-list e-text-body">
+            <ul class="e-list e-text-lg">
               <li>Chrome - latest</li>
               <li>Firefox - latest</li>
               <li>Safari - latest</li>
               <li>MS Edge - latest</li>
               <li>MS Internet Explorer - 11 *</li>
             </ul>
-            <p class="e-text-body">
+            <p class="e-text-lg">
               * FYI: Even though the design system have to support Internet Explorer 11, you might not have
               to. If you are developing on a internal system for usage by Elvia employees only, you do not
               have to support IE11. Don't forget to give a warning to the user if the browser is IE11.
