--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.scss
@@ -158,7 +158,7 @@ $maxIconContainerMobile: 450px;
         margin: 4px;
       }
 
-      .e-text-description {
+      .e-text-md {
         margin-top: 8px;
         width: 78px;
         line-height: 16px;
