--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
@@ -44,21 +44,21 @@
                     <div class="information-circle e-bg-grey-20"></div>
                     <div>
                       <div class="e-title-caps e-mr-8">Columns</div>
-                      <div class="e-text-info">12</div>
+                      <div class="e-text-sm">12</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-orange-mango">M</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Margin</div>
-                      <div class="e-text-info">120px</div>
+                      <div class="e-text-sm">120px</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-blue-berry">G</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Gutter</div>
-                      <div class="e-text-info">56px</div>
+                      <div class="e-text-sm">56px</div>
                     </div>
                   </div>
                 </div>
@@ -80,21 +80,21 @@
                     <div class="information-circle e-bg-grey-20"></div>
                     <div>
                       <div class="e-title-caps e-mr-8">Columns</div>
-                      <div class="e-text-info">8</div>
+                      <div class="e-text-sm">8</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-orange-mango">M</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Margin</div>
-                      <div class="e-text-info">32px</div>
+                      <div class="e-text-sm">32px</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-blue-berry">G</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Gutter</div>
-                      <div class="e-text-info">32px</div>
+                      <div class="e-text-sm">32px</div>
                     </div>
                   </div>
                 </div>
@@ -116,21 +116,21 @@
                     <div class="information-circle e-bg-grey-20"></div>
                     <div>
                       <div class="e-title-caps e-mr-8">Columns</div>
-                      <div class="e-text-info">6</div>
+                      <div class="e-text-sm">6</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-orange-mango">M</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Margin</div>
-                      <div class="e-text-info">16px</div>
+                      <div class="e-text-sm">16px</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-blue-berry">G</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Gutter</div>
-                      <div class="e-text-info">16px</div>
+                      <div class="e-text-sm">16px</div>
                     </div>
                   </div>
                 </div>
@@ -166,22 +166,22 @@
                     <div class="information-circle e-bg-grey-20"></div>
                     <div>
                       <div class="e-title-caps e-mr-8">Columns</div>
-                      <div class="e-text-info">12</div>
+                      <div class="e-text-sm">12</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-orange-mango">M</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Margin</div>
-                      <div class="e-text-info">Left: 88px</div>
-                      <div class="e-text-info">Right: 32px</div>
+                      <div class="e-text-sm">Left: 88px</div>
+                      <div class="e-text-sm">Right: 32px</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-blue-berry">G</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Gutter</div>
-                      <div class="e-text-info">32px</div>
+                      <div class="e-text-sm">32px</div>
                     </div>
                   </div>
                 </div>
@@ -203,22 +203,22 @@
                     <div class="information-circle e-bg-grey-20"></div>
                     <div>
                       <div class="e-title-caps e-mr-8">Columns</div>
-                      <div class="e-text-info">8</div>
+                      <div class="e-text-sm">8</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-orange-mango">M</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Margin</div>
-                      <div class="e-text-info">Left: 88px</div>
-                      <div class="e-text-info">Right: 32px</div>
+                      <div class="e-text-sm">Left: 88px</div>
+                      <div class="e-text-sm">Right: 32px</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-blue-berry">G</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Gutter</div>
-                      <div class="e-text-info">24px</div>
+                      <div class="e-text-sm">24px</div>
                     </div>
                   </div>
                 </div>
@@ -240,21 +240,21 @@
                     <div class="information-circle e-bg-grey-20"></div>
                     <div>
                       <div class="e-title-caps e-mr-8">Columns</div>
-                      <div class="e-text-info">6</div>
+                      <div class="e-text-sm">6</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-orange-mango">M</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Margin</div>
-                      <div class="e-text-info">16px</div>
+                      <div class="e-text-sm">16px</div>
                     </div>
                   </div>
                   <div class="information-container">
                     <div class="information-circle e-bg-blue-berry">G</div>
                     <div>
                       <div class="e-title-caps e-mr-8">Gutter</div>
-                      <div class="e-text-info">16px</div>
+                      <div class="e-text-sm">16px</div>
                     </div>
                   </div>
                 </div>
@@ -511,7 +511,7 @@
             </ng-container>
           </app-copy>
           <div class="display-card-title e-title-caps e-mt-8">{{ item.title }}</div>
-          <div class="display-card-variable e-text-description">{{ item.size }}</div>
+          <div class="display-card-variable e-text-md">{{ item.size }}</div>
         </div>
       </div>
       <div class="e-mt-24">Something to keep in mind when choosing spacing:</div>
@@ -526,7 +526,7 @@
 
       <app-component-subsection [sectionTitle]="'Help guide'">
         <ng-container ngProjectAs="sectionContent">
-          <div class="e-text-body e-mb-32">
+          <div class="e-text-lg e-mb-32">
             We have defined a guide to help you choose the correct spacing. These are not rules so exceptions
             may occur. Spacing will also be used differently depending on which device you are on.
           </div>
