--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.scss
@@ -182,7 +182,7 @@
       align-items: center;
       justify-content: center;
       margin-right: 16px;
-      @include typography.typography('text-caps');
+      @include typography.typography('title-caps');
     }
   }
 }
