--- a/packages/web/src/app/doc-pages/other-pages/the-design-system-doc/the-design-system-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/the-design-system-doc/the-design-system-doc.component.html
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div class="e-text-body">
+      <div class="e-text-lg">
         Through creating a common toolbox for all of Elvias utilities we aim to make the everyday a bit
         smoother for Elvia employees as well as customers and end-users interacting with Elvias systems. We
         want to help creating user-friendly applications and inspire to better solutions.
@@ -43,7 +43,7 @@
           <img src="../../../../assets/the-design-system/video-game-magic-wand.svg" alt="" />
         </div>
         <div class="principleInfo">
-          <div class="e-text-body e-mb-24">
+          <div class="e-text-lg e-mb-24">
             <span style="font-weight: 500; margin-right: 16px">Easy</span>
             <span class="e-text-grey-80">
               <span class="e-text-grey-10" style="margin-right: 16px">|</span>
@@ -65,7 +65,7 @@
           <img src="../../../../assets/the-design-system/module-puzzle.svg" alt="" />
         </div>
         <div class="principleInfo">
-          <div class="e-text-body e-mb-24">
+          <div class="e-text-lg e-mb-24">
             <span style="font-weight: 500; margin-right: 16px">Flexible</span>
             <span class="e-text-grey-80">
               <span class="e-text-grey-10" style="margin-right: 16px">|</span>
@@ -87,7 +87,7 @@
           <img src="../../../../assets/the-design-system/ecology-globe-hand.svg" alt="" />
         </div>
         <div class="principleInfo">
-          <div class="e-text-body e-mb-24">
+          <div class="e-text-lg e-mb-24">
             <span style="font-weight: 500; margin-right: 16px">Open</span>
             <span class="e-text-grey-80">
               <span class="e-text-grey-10" style="margin-right: 16px">|</span>
@@ -109,7 +109,7 @@
           <img src="../../../../assets/the-design-system/rating-star-winner.svg" alt="" />
         </div>
         <div class="principleInfo">
-          <div class="e-text-body e-mb-24">
+          <div class="e-text-lg e-mb-24">
             <span style="font-weight: 500; margin-right: 16px">Quality</span>
             <span class="e-text-grey-80">
               <span class="e-text-grey-10" style="margin-right: 16px">|</span>
@@ -131,7 +131,7 @@
           <img src="../../../../assets/the-design-system/space-rocket-flying.svg" alt="" />
         </div>
         <div class="principleInfo">
-          <div class="e-text-body e-mb-24">
+          <div class="e-text-lg e-mb-24">
             <span style="font-weight: 500; margin-right: 16px">Innovative</span>
             <span class="e-text-grey-80">
               <span class="e-text-grey-10" style="margin-right: 16px">|</span>
@@ -153,7 +153,7 @@
   <!--Contribute-->
   <app-component-section [sectionTitle]="'Contribute'">
     <ng-container ngProjectAs="sectionContent">
-      <div class="e-text-body">
+      <div class="e-text-lg">
         The design system belongs to all of Elvia and we want to make sure it suits all kinds of usage. Have
         thoughts, ideas, or wondering how you can contribute? Take a look at the
         <a class="e-link e-link--inline" [routerLink]="['/about/contribute']">contribution model</a>
