--- a/packages/web/src/app/doc-pages/other-pages/utilities-doc/utilities-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/utilities-doc/utilities-doc.component.html
@@ -21,7 +21,7 @@
           <h3 class="rowTitle e-title-xs elvis-anchor elvis-anchor-title" *ngIf="!group.path">
             {{ group.title }}
           </h3>
-          <div class="e-text-description" style="width: 100%">
+          <div class="e-text-md" style="width: 100%">
             <div class="tableRow" *ngFor="let class of group.classes">
               <span class="class">
                 <app-copy [message]="class.className">
