--- a/packages/web/src/app/shared/component-documentation/component-structure/component-section/component-section.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-section/component-section.component.html
@@ -34,7 +34,7 @@
     </span>
   </div>
 
-  <div class="component-section__content e-text-body">
+  <div class="component-section__content e-text-lg">
     <ng-content select="sectionContent"></ng-content>
   </div>
 </div>
