--- a/packages/web/src/app/shared/component-documentation/component-structure/component-subsection/component-subsection.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-subsection/component-subsection.component.html
@@ -14,7 +14,7 @@
       </app-copy>
     </span>
   </h3>
-  <div class="component-section__content e-text-body">
+  <div class="component-section__content e-text-lg">
     <ng-content select="sectionContent"></ng-content>
   </div>
 </div>
