--- a/packages/web/src/app/shared/component-documentation/component-structure/component-subsubsection/component-subsubsection.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-subsubsection/component-subsubsection.component.html
@@ -7,7 +7,7 @@
       <label class="e-label e-label--orange">Figma only</label>
     </span>
   </h4>
-  <div class="component-section__content e-text-body">
+  <div class="component-section__content e-text-lg">
     <ng-content select="sectionContent"></ng-content>
   </div>
 </div>
