--- a/packages/web/src/app/shared/do-dont/do-dont.component.html
+++ b/packages/web/src/app/shared/do-dont/do-dont.component.html
@@ -12,7 +12,7 @@
       <span style="display: flex; align-items: center">
         <i class="e-icon e-icon--check_circle e-icon--sm e-icon--color-green" aria-hidden="true"></i>
       </span>
-      <p class="e-text-body">Do this!</p>
+      <p class="e-text-lg">Do this!</p>
     </div>
   </div>
   <div class="doDont" *ngIf="!do">
@@ -28,7 +28,7 @@
       <span style="display: flex; align-items: center">
         <i class="e-icon e-icon--remove_circle e-icon--sm e-icon--color-red" aria-hidden="true"></i>
       </span>
-      <p class="e-text-body">Don't do this!</p>
+      <p class="e-text-lg">Don't do this!</p>
     </div>
   </div>
 </div>
