--- a/packages/web/src/app/shared/when-to-use/when-to-use.component.html
+++ b/packages/web/src/app/shared/when-to-use/when-to-use.component.html
@@ -6,7 +6,7 @@
       </div>
       <div>When to use:</div>
     </div>
-    <span class="e-text-description">
+    <span class="e-text-md">
       <ul>
         <li *ngFor="let when of whens">
           {{ when }}
@@ -21,7 +21,7 @@
       </div>
       <div>When not to use:</div>
     </div>
-    <span class="e-text-description">
+    <span class="e-text-md">
       <ul>
         <li *ngFor="let whenNot of whenNots">
           {{ whenNot }}
