--- a/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.scss
+++ b/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.scss
@@ -77,7 +77,7 @@
 
         .text {
           display: flex;
-          @include typography('text-caps');
+          @include typography('title-caps');
         }
 
         .links-icon {
