--- a/packages/elvis/src/components/chip.scss
+++ b/packages/elvis/src/components/chip.scss
@@ -1,11 +1,12 @@
-@use "sass:map";
-@use "../variables/typography";
+@use 'sass:map';
+@use '../variables/typography';
 @use '../variables/colors';
-@use "../utilities/icons";
-@use "../utilities/helpers";
+@use '../utilities/icons';
+@use '../utilities/helpers';
 
 $chips-padding: 5px 16px;
 
+// TODO: Deprecate
 .e-chip-container {
   display: flex;
   flex-direction: row;
@@ -30,7 +31,7 @@ $chips-padding: 5px 16px;
   @extend .e-chip--green-apple;
 
   &__label {
-    @include typography.typography('text-info');
+    @include typography.typography('text-sm');
   }
 
   &__close {
