--- a/packages/elvis/src/components/form/checkbox.scss
+++ b/packages/elvis/src/components/form/checkbox.scss
@@ -41,12 +41,14 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
   }
 
   &__label {
+    margin-left: 8px;
+    width: fit-content;
+
     font-family: 'Red Hat Text', Verdana, sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
-    margin-left: 8px;
-    width: fit-content;
+    color: colors.color('font-color');
   }
 
   &.e-checkbox--sm {
@@ -58,7 +60,8 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     }
 
     .e-checkbox__label {
-      @include typography.typography('text-info');
+      @include typography.typography('text-sm');
+      color: colors.color('font-color');
       line-height: 16px;
     }
 
