--- a/packages/elvis/src/components/form/field.scss
+++ b/packages/elvis/src/components/form/field.scss
@@ -15,6 +15,8 @@
     display: block;
     margin-bottom: 5px;
     @include typography.typography('text-label');
+    color: colors.color('font-color');
+    text-align: left;
 
     &.e-form-field__label--optional::after {
       content: ' (valgfri)';
@@ -27,7 +29,8 @@
     display: flex;
     align-items: center;
     margin-top: 8px;
-    @include typography.typography('text-info');
+    @include typography.typography('text-sm');
+    color: colors.color('font-color');
 
     &.e-form-field__error--visible {
       visibility: visible;
