--- a/packages/elvis/src/components/form/search.scss
+++ b/packages/elvis/src/components/form/search.scss
@@ -1,3 +1,4 @@
+@use '../../variables/colors';
 @use '../../utilities/icons';
 @use '../../utilities/helpers';
 
@@ -13,6 +14,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
+  color: colors.color('font-color');
 
   &--instant {
     .e-input {
