--- a/packages/elvis/src/components/header.scss
+++ b/packages/elvis/src/components/header.scss
@@ -133,7 +133,7 @@ $sidebar-mobile-z-index: -2;
         cursor: pointer;
       }
       .e-header__top-bar-desktop__app-title {
-        @include typography.typography('text-caps');
+        @include typography.typography('title-caps');
       }
     }
   }
@@ -204,7 +204,7 @@ $sidebar-mobile-z-index: -2;
   }
   &__app {
     position: relative;
-    @include typography.typography('text-caps');
+    @include typography.typography('title-caps');
     @extend %app-menu;
   }
   &__title {
@@ -255,7 +255,7 @@ $sidebar-mobile-z-index: -2;
       }
       &-mail {
         padding-top: 12px;
-        @include typography.typography('text-info');
+        @include typography.typography('text-sm');
       }
       &-settings {
         position: relative;
@@ -475,7 +475,7 @@ $sidebar-mobile-z-index: -2;
         display: flex;
         flex-direction: column;
         .e-header__top-bar-mobile__title {
-          @include typography.typography('text-info');
+          @include typography.typography('text-sm');
           color: colors.color('grey-70');
         }
         .e-header__top-bar-mobile__link {
@@ -503,7 +503,7 @@ $sidebar-mobile-z-index: -2;
         flex-direction: column;
         &-name {
           margin-top: 8px;
-          @include typography.typography('text-info');
+          @include typography.typography('text-sm');
           letter-spacing: 0.2px;
         }
         &-settings,
@@ -591,7 +591,7 @@ $sidebar-mobile-z-index: -2;
     .e-header__sidebar__text {
       display: none;
       margin-left: 8px;
-      @include typography.typography('text-description');
+      @include typography.typography('text-md');
     }
     .e-header__sidebar__icon {
       position: relative;
