--- a/packages/web/src/app/doc-pages/components/stepper-doc/stepper-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/stepper-doc/stepper-doc.component.html
@@ -107,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="e-text-description">
+          <div class="e-text-md">
             Active steps are steps the user is currently working on or completing.
             <div><span class="code-text">e-stepper__step--active</span></div>
           </div>
@@ -121,7 +121,7 @@
               </div>
             </div>
           </div>
-          <div class="e-text-description">
+          <div class="e-text-md">
             Done steps are steps that the user has already completed.
             <div><span class="code-text">e-stepper__step--done</span></div>
           </div>
@@ -135,7 +135,7 @@
               </div>
             </div>
           </div>
-          <div class="e-text-description">
+          <div class="e-text-md">
             Active-done steps are active steps that has been completed.
             <div><span class="code-text">e-stepper__step--active-done</span></div>
           </div>
@@ -145,7 +145,7 @@
           <div class="number-cont">
             <div class="number error">2</div>
           </div>
-          <div class="e-text-description">
+          <div class="e-text-md">
             Error steps are used to highlight a step if you have forgotten to fill out required fields. This
             step should not be activated before you are at the final step and click the button to submit a
             form.
@@ -157,7 +157,7 @@
           <div class="number-cont">
             <div class="number disabled">2</div>
           </div>
-          <div class="e-text-description">
+          <div class="e-text-md">
             Disabled steps are used in a forced stepper where the user has to complete previous steps to
             enable this one.
             <div><span class="code-text">e-stepper--forced</span></div>
@@ -176,7 +176,7 @@
             </span>
             <span class="number collapsed">7</span>
           </div>
-          <div class="e-text-description">Collapsed steps are used when you have more than 4 steps.</div>
+          <div class="e-text-md">Collapsed steps are used when you have more than 4 steps.</div>
         </div>
       </div>
     </ng-container>
