--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
@@ -23,7 +23,7 @@
             <div class="e-alert__title">{{ icon.pretty }}</div>
             <div class="e-alert__text">
               <div style="display: flex; flex-direction: row; justify-content: space-between">
-                <div class="e-text-info e-text-grey-70">
+                <div class="e-text-sm e-text-grey-70">
                   e-icon e-icon--{{ icon.title }} e-icon--sm
                   <span *ngIf="inverted">e-icon--inverted</span>
                 </div>
@@ -31,7 +31,7 @@
             </div>
           </div>
 
-          <div class="alert-buttons e-text-info e-text-grey-70">
+          <div class="alert-buttons e-text-sm e-text-grey-70">
             <div class="copy-text-container">
               <div
                 [ngClass]="{ hide: !copied }"
@@ -193,7 +193,7 @@
                       aria-hidden="true"
                     ></i>
                   </div>
-                  <div class="e-text-info e-text-center" [style.color]="inverted ? 'white' : 'black'">
+                  <div class="e-text-sm e-text-center" [style.color]="inverted ? 'white' : 'black'">
                     {{ icon.pretty }}
                   </div>
                 </div>
@@ -216,7 +216,7 @@
                           aria-hidden="true"
                         ></i>
                       </div>
-                      <div class="e-text-info e-text-center" [style.color]="inverted ? 'white' : 'black'">
+                      <div class="e-text-sm e-text-center" [style.color]="inverted ? 'white' : 'black'">
                         {{ icon.pretty }}
                       </div>
                     </div>
