--- a/packages/web/src/app/doc-pages/other-pages/shadow-doc/shadow-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/shadow-doc/shadow-doc.component.html
@@ -22,17 +22,17 @@
         </ng-container>
       </app-copy>
       <div class="display-text-content">
-        <div class="display-card-sub-title e-text-info">
+        <div class="display-card-sub-title e-text-sm">
           <div class="sub-title e-title-caps">Class</div>
           <div class="sub-content">
             {{ item.className }}
           </div>
         </div>
-        <div class="display-card-sub-title e-text-info">
+        <div class="display-card-sub-title e-text-sm">
           <div class="sub-title e-title-caps">Blur</div>
           <div class="sub-content">{{ item.blur }}</div>
         </div>
-        <div class="display-card-sub-title e-text-info">
+        <div class="display-card-sub-title e-text-sm">
           <div class="sub-title e-title-caps">Opacity</div>
           <div class="sub-content">{{ item.opacity }}</div>
         </div>
