--- a/packages/web/src/app/shell/footer/footer.component.html
+++ b/packages/web/src/app/shell/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="e-grid">
       <div class="row no-gutters justify-content-center">
         <div
-          class="d-md-none d-lg-none d-xl-none d-sm-block col-xs-12 col-sm-8 col-sm-8-custom e-text-info e-mb-40"
+          class="d-md-none d-lg-none d-xl-none d-sm-block col-xs-12 col-sm-8 col-sm-8-custom e-text-sm e-mb-40"
         >
           <div class="text-align-center">
             <div class="e-text-center">
@@ -27,7 +27,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-info-custom">
+        <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-sm-custom">
           <div class="text-align-center">
             <div class="e-text-left">
               <!-- TODO: LOCALIZATION
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-        <div class="d-xs-none d-sm-none d-md-block col-md-6 col-lg-6 e-text-info">
+        <div class="d-xs-none d-sm-none d-md-block col-md-6 col-lg-6 e-text-sm">
           <div class="text-align-center">
             <div class="e-text-center" style="width: 389px; margin: auto">
               Have questions? Reach out to us on slack
