--- a/packages/web/src/app/shell/footer/footer.component.scss
+++ b/packages/web/src/app/shell/footer/footer.component.scss
@@ -61,7 +61,7 @@
       }
     }
 
-    .text-info-custom {
+    .text-sm-custom {
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-size: 11px;
       line-height: 160%;
@@ -81,7 +81,7 @@
       }
     }
 
-    .e-text-info {
+    .e-text-sm {
       color: var(--e-white);
     }
 
